--- a/.github/workflows/today.yml
+++ b/.github/workflows/today.yml
@@ -12,17 +12,27 @@ jobs:
   fetch:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install requests beautifulsoup4 lxml
+
+      - name: Ensure data dir exists
+        run: |
+          mkdir -p data
+
       - name: Build today_market.json
         run: |
-          python fetch_today_market.py   # ← ここを修正
+          python fetch_today_market.py   # ← ルートにある想定
+
       - name: Commit & push
         run: |
           git config user.name  "github-actions[bot]"
