--- a/.github/workflows/predict.yml
+++ b/.github/workflows/predict.yml
@@ -1,28 +1,16 @@
-name: Predict (every 5 min)
+- name: Show workspace files (debug)
+  run: |
+    pwd
+    ls -al
+    ls -al scripts || true
 
-on:
-  schedule:
-    - cron: "*/5 * * * *"
-  workflow_dispatch:
+- name: Ensure data dir exists
+  run: mkdir -p data
 
-permissions:
-  contents: write
+# ルートにあるなら
+- name: Build predict_latest.json
+  run: python predict_refresh.py
 
-jobs:
-  refresh:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-      - run: |
-          python -m pip install --upgrade pip
-          pip install yfinance pandas numpy
-      - run: python scripts/predict_refresh.py
-      - run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add data/predict_latest.json
-          git commit -m "chore: update predict_latest.json" || echo "no changes"
-          git push
+# scripts/ にあるなら
+# - name: Build predict_latest.json
+#   run: python scripts/predict_refresh.py
