--- a/.github/workflows/predict.yml
+++ b/.github/workflows/predict.yml
@@ -1,16 +1,42 @@
-- name: Show workspace files (debug)
-  run: |
-    pwd
-    ls -al
-    ls -al scripts || true
+name: Predict (every 5 min)
 
-- name: Ensure data dir exists
-  run: mkdir -p data
+on:
+  schedule:
+    - cron: "*/5 * * * *"     # 5分ごと（UTC）
+  workflow_dispatch:
 
-# ルートにあるなら
-- name: Build predict_latest.json
-  run: python predict_refresh.py
+permissions:
+  contents: write
 
-# scripts/ にあるなら
-# - name: Build predict_latest.json
-#   run: python scripts/predict_refresh.py
+jobs:
+  refresh:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade yfinance pandas numpy
+
+      - name: Ensure data dir exists
+        run: mkdir -p data
+
+      - name: Build predict_latest.json
+        run: python predict_refresh.py       # ← ルートにある想定
+        # scripts/ 配下に置いている場合は上をコメントアウトして↓に変更
+        # run: python scripts/predict_refresh.py
+
+      - name: Commit & push
+        run: |
+          git config user.name  "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add data/predict_latest.json
+          git commit -m "chore: update predict_latest.json" || echo "no changes"
+          git push
